--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="handleBoardAppearanceReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset All</button>
+                    <button onpointerdown="handleBoardAppearanceReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset Page</button>
                     <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
                 </div>
             </section>
