--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-48 text-sm uppercase">Close Settings</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-48 text-sm">Close Settings</button>
                 </div>
             </section>
 
@@ -189,7 +189,7 @@
                 </div>
                 <div class="settings-actions settings-reset-btn">
                     <button onpointerdown="handleBoardAppearanceReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset Page</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm">Close</button>
                 </div>
             </section>
 
