--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-48 text-sm">Close Settings</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--wide settings-close-btn">Close Settings</button>
                 </div>
             </section>
 
@@ -188,8 +188,8 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="handleBoardAppearanceReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset Page</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm">Close</button>
+                    <button onpointerdown="handleBoardAppearanceReset()" class="btn-action btn-action--compact btn-action--secondary">Reset Page</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--compact settings-close-btn">Close</button>
                 </div>
             </section>
 
@@ -218,8 +218,8 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="handleMetricsReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset All</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
+                    <button onpointerdown="handleMetricsReset()" class="btn-action btn-action--compact btn-action--secondary">Reset Page</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--compact settings-close-btn">Close</button>
                 </div>
             </section>
 
@@ -244,8 +244,8 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn settings-reset-btn--compact">
-                    <button onpointerdown="handleKeybindsReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset All</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
+                    <button onpointerdown="handleKeybindsReset()" class="btn-action btn-action--compact btn-action--secondary">Reset Page</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--compact settings-close-btn">Close</button>
                 </div>
             </section>
 
@@ -266,8 +266,8 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="handleOnlineReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset All</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
+                    <button onpointerdown="handleOnlineReset()" class="btn-action btn-action--compact btn-action--secondary">Reset Page</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--compact settings-close-btn">Close</button>
                 </div>
             </section>
 
@@ -304,8 +304,8 @@
                     </div>
                 </div>
                 <div class="settings-actions settings-reset-btn">
-                    <button onpointerdown="handleAdvancedReset()" class="btn-action !w-32 !bg-gray-600 !shadow-[#444] text-sm">Reset All</button>
-                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action settings-close-btn !w-32 text-sm uppercase">Close</button>
+                    <button onpointerdown="handleAdvancedReset()" class="btn-action btn-action--compact btn-action--secondary">Reset Page</button>
+                    <button onpointerdown="toggleSettingsPanel(false)" class="btn-action btn-action--compact settings-close-btn">Close</button>
                 </div>
             </section>
         </div>
@@ -363,7 +363,7 @@
         <div class="extra-stats-modal" onpointerdown="event.stopPropagation()">
             <h3 class="text-pink-400 font-black uppercase text-center mb-4">Match Details</h3>
             <div id="extra-stats-content"></div>
-            <button onpointerdown="closeExtraStatsModal()" class="btn-action !w-full !py-2 text-sm uppercase mt-4">Close</button>
+            <button onpointerdown="closeExtraStatsModal()" class="btn-action !w-full !py-2 text-sm mt-4">Close</button>
         </div>
     </div>
 
