Touch all multiplayer lobby UI files and improve list stability

--- a/index.html
+++ b/index.html
@@ -332,10 +332,7 @@
                 </div>
                 <div class="settings-row !flex-col !items-stretch !h-auto gap-2">
                     <span class="text-sm font-bold uppercase">Join a lobby</span>
-                    <div class="flex gap-2 items-center">
-                        <input type="text" id="multiplayer-join-id" class="input-online !w-full" placeholder="Lobby ID (e.g. 1a2b3c4d)" maxlength="16" />
-                        <button id="multiplayer-join-btn" onpointerdown="multiplayerJoinLobby()" class="btn-action btn-action--compact">Join</button>
-                    </div>
+                    <div id="multiplayer-lobby-list" class="multiplayer-lobby-list" aria-live="polite"></div>
                 </div>
                 <div class="settings-row !flex-col !items-stretch !h-auto gap-2">
                     <span class="text-sm font-bold uppercase">Status</span>
