Split multiplayer logic into dedicated modules

--- a/index.html
+++ b/index.html
@@ -454,6 +454,11 @@
 <script src="set-math.js"></script>
 <script src="tps-logic.js"></script>
 <script src="multiplayer.js"></script>
+<script src="multiplayer/ui.js"></script>
+<script src="multiplayer/lobby.js"></script>
+<script src="multiplayer/signaling.js"></script>
+<script src="multiplayer/rtc.js"></script>
+<script src="multiplayer/state-sync.js"></script>
 <script src="game-logic.js"></script>
 <script src="training-mode.js"></script>
 <script src="results-stats.js"></script>
