Reorganize frontend files into structured assets directories

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -441,30 +441,30 @@
     </div>
 </div>
 
-<script src="constants.js"></script>
-<script src="storage-module.js"></script>
-<script src="state.js"></script>
-<script src="resizer.js"></script>
-<script src="utilities.js"></script>
-<script src="online-leaderboard.js"></script>
-<script src="modal-management.js"></script>
-<script src="graphics-rendering.js"></script>
-<script src="settings.js"></script>
-<script src="color-picker.js"></script>
-<script src="set-math.js"></script>
-<script src="tps-logic.js"></script>
-<script src="multiplayer.js"></script>
-<script src="multiplayer/ui.js"></script>
-<script src="multiplayer/lobby.js"></script>
-<script src="multiplayer/signaling.js"></script>
-<script src="multiplayer/rtc.js"></script>
-<script src="multiplayer/state-sync.js"></script>
-<script src="game-logic.js"></script>
-<script src="training-mode.js"></script>
-<script src="results-stats.js"></script>
-<script src="keybinds.js"></script>
-<script src="event-listeners.js"></script>
-<script src="timer.js"></script>
+<script src="assets/js/core/constants.js"></script>
+<script src="assets/js/core/storage-module.js"></script>
+<script src="assets/js/core/state.js"></script>
+<script src="assets/js/ui/resizer.js"></script>
+<script src="assets/js/core/utilities.js"></script>
+<script src="assets/js/online/online-leaderboard.js"></script>
+<script src="assets/js/ui/modal-management.js"></script>
+<script src="assets/js/game/graphics-rendering.js"></script>
+<script src="assets/js/ui/settings.js"></script>
+<script src="assets/js/ui/color-picker.js"></script>
+<script src="assets/js/game/set-math.js"></script>
+<script src="assets/js/game/tps-logic.js"></script>
+<script src="assets/js/online/multiplayer.js"></script>
+<script src="assets/js/online/multiplayer/ui.js"></script>
+<script src="assets/js/online/multiplayer/lobby.js"></script>
+<script src="assets/js/online/multiplayer/signaling.js"></script>
+<script src="assets/js/online/multiplayer/rtc.js"></script>
+<script src="assets/js/online/multiplayer/state-sync.js"></script>
+<script src="assets/js/game/game-logic.js"></script>
+<script src="assets/js/game/training-mode.js"></script>
+<script src="assets/js/ui/results-stats.js"></script>
+<script src="assets/js/ui/keybinds.js"></script>
+<script src="assets/js/ui/event-listeners.js"></script>
+<script src="assets/js/ui/timer.js"></script>
 <script>
   (function() {
     document.querySelectorAll('[data-svg-icon]').forEach(function(el) {
